Move the bookings button into the hamburger menu when view on small devices. Ensure the booking button stays aligned to the right of the navbar on devices >768px.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,37 @@
-/* Navbar Items */
+.uppercase {
+    text-transform: uppercase;
+}
+
+/*---------- Navbar Items ----------*/
 
 /* Bring the navbar to the front and set opacity so you can see the background image */
 .navbar {
+    text-align: center;
     z-index: 1;
     opacity: 1.0;
 }
 
+/*---------- Images ----------*/
 .hero-image {
     height: 100vh;
 
     /* Keep the background image center aligned so the main focus of the imaage is always in the middle on all devices */
     background-image: url(../images/sam-browne-VAu2j8My3-0-unsplash-resize.jpg); 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
     position: relative;
     background-attachment: fixed;
     background-position: center 35%;
     background-repeat: no-repeat;
+}
+
+/*---------- Media Queries ----------*/
+
+/* Medium Devices - 7698x and above */
+@media screen and (min-width: 768px) {
+    /* Align the booking button to the right of the nav bar */
+    .btn-bookings {
+        position: absolute;
+        margin-right: 16px;
+        right: 0;
+    }
 }
